# reddit-notifier

./: CMakeLists.txt  README.md  main.cpp
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  notifier.cpp  notifier.h  notifierconfig.cpp  notifierconfig.h  post.cpp  post.h  postlistmodel.cpp  postlistmodel.h  postparser.cpp  postparser.h  redditquery.cpp  redditquery.h  traycontroller.cpp  watcher.cpp  watcher.h
tests/: CMakeLists.txt  configstest.cpp  main.cpp  redditquery.cpp  redditqueryingtest.cpp
ui/: configcontroller.cpp  configcontroller.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  notifierviewwidget.cpp  notifierviewwidget.h  notifierviewwidget.ui  postdelegate.cpp  postdelegate.h  postviewcontroller.cpp  postviewcontroller.h  postviewwidget.cpp  postviewwidget.h  postviewwidget.ui  traycontroller.cpp  traycontroller.h
